fix picture alignment to center

--- a/style.css
+++ b/style.css
@@ -22,5 +22,4 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    background-color: #ff7f50;
 }
